# BRIEF-Descriptor-and-Matching-Implementations

./: CMakeLists.txt  README.md  brief_descriptor.cc  brief_descriptor.hpp  compile.sh  image.cc  image.hpp  image_test.cc  keypoint.hpp  small_city.pgm  small_watch.pgm  util.cc  util.hpp
